// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Components/Menus 2 Lines MenuItem With Avatar: Components/Menus 2 Lines MenuItem With Avatar 1`] = `
.c5.c5 {
  padding: 0;
}

.c5.c5 .list-item-primary {
  display: block;
  color: #212121;
  font-size: 0.875rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 20px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c5.c5 .list-item-secondary {
  display: block;
  color: #757575;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  word-break: break-word;
}

.c5.c5.multiline {
  margin: 0;
}

.c4.c4 {
  width: 32px;
  height: 32px;
  font-size: 1rem;
  font-weight: 500;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 22px;
  background-color: #f5f6fb;
}

.c4.c4:hover {
  opacity: 0.88;
  cursor: pointer;
}

.c4.c4:active {
  opacity: 0.76;
}

.c4:focus {
  outline: none;
}

.c4 > .avatar-short-name {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  width: 100%;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c2.c2 {
  min-width: unset;
  margin-right: 8px;
  font-size: 1rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 22px;
  color: #616161;
}

.c0.c0 {
  padding: 4px 16px;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #616161;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  box-sizing: border-box;
}

.c0.c0:focus {
  background-color: rgba(0,0,0,0.12);
}

.c0.c0:hover {
  background-color: rgba(158,158,158,0.12);
}

.c0.c0:active {
  background-color: #0684bd;
  color: #fff;
}

.c0.c0:active .c1 {
  color: #fff;
}

.c6 .c3:hover,
.c6 .c3:active {
  cursor: default;
  opacity: 1;
}

<li
  aria-disabled={false}
  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c0 MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={0}
>
  <div
    className="MuiListItemIcon-root c1 c2"
  >
    <div
      className="MuiAvatar-root c3 c4"
      size="medium"
    >
      <img
        className="MuiAvatar-img"
        src="test-file-stub"
      />
    </div>
  </div>
  <div
    className="MuiListItemText-root c5 MuiListItemText-multiline multiline"
    flex="1 1 auto"
  >
    <span
      className="MuiTypography-root MuiListItemText-primary list-item-primary MuiTypography-body1"
    >
      Two-line item name
    </span>
    <p
      className="MuiTypography-root MuiListItemText-secondary list-item-secondary MuiTypography-body2 MuiTypography-colorTextSecondary"
    >
      Secondary text
    </p>
  </div>
</li>
`;

exports[`Storyshots Components/Menus SubMenu: Components/Menus SubMenu 1`] = `
.c2 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c3 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 20px;
  fill: #757575;
}

.c0.c0 {
  max-width: 1280px;
  max-height: 416px;
  overflow: auto;
}

.c4.c4 {
  padding: 4px 16px;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #616161;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  box-sizing: border-box;
}

.c4.c4:focus {
  background-color: rgba(0,0,0,0.12);
}

.c4.c4:hover {
  background-color: rgba(158,158,158,0.12);
}

.c4.c4:active {
  background-color: #0684bd;
  color: #fff;
}

.c4.c4:active .c5 {
  color: #fff;
}

.c1.c1 {
  padding: 4px 16px;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #616161;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  box-sizing: border-box;
}

.c1.c1:focus {
  background-color: rgba(0,0,0,0.12);
}

.c1.c1:hover {
  background-color: rgba(158,158,158,0.12);
}

.c1.c1:active {
  background-color: #0684bd;
  color: #fff;
}

.c1.c1:active .c5 {
  color: #fff;
}

.c1.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
}

<ul
  className="MuiList-root c0 MuiList-padding"
  onKeyDown={[Function]}
  role="menu"
  style={
    Object {
      "width": "180px",
    }
  }
  tabIndex={-1}
>
  <div
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      onMouseDown={[Function]}
    >
      <li
        aria-disabled={false}
        className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c1 MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
        onBlur={[Function]}
        onClick={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        role="menuitem"
        tabIndex={-1}
      >
        Sub Menu
        <span
          className=" arrow_right icon c2"
        >
          <svg
            className="c3"
            role="img"
            size="medium"
          >
            <use
              href="#icon-arrow_right"
              xlinkHref="#icon-arrow_right"
            />
          </svg>
        </span>
      </li>
    </span>
  </div>
  <li
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c4 MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="menuitem"
    tabIndex={0}
  >
    My account
  </li>
  <li
    aria-disabled={false}
    className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c4 MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
    onBlur={[Function]}
    onClick={[Function]}
    onDragLeave={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    onMouseDown={[Function]}
    onMouseLeave={[Function]}
    onMouseUp={[Function]}
    onTouchEnd={[Function]}
    onTouchMove={[Function]}
    onTouchStart={[Function]}
    role="menuitem"
    tabIndex={0}
  >
    Logout
  </li>
</ul>
`;

exports[`Storyshots Components/Menus Text MenuItem With Icon: Components/Menus Text MenuItem With Icon 1`] = `
.c3 {
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
}

.c4 {
  display: inline-block;
  width: 1em;
  height: 1em;
  stroke-width: 0;
  stroke: currentColor;
  fill: currentColor;
  pointer-events: none;
  font-size: 16px;
}

.c2.c2 {
  min-width: unset;
  margin-right: 8px;
  font-size: 1rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 22px;
  color: #616161;
}

.c0.c0 {
  padding: 4px 16px;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #616161;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  box-sizing: border-box;
}

.c0.c0:focus {
  background-color: rgba(0,0,0,0.12);
}

.c0.c0:hover {
  background-color: rgba(158,158,158,0.12);
}

.c0.c0:active {
  background-color: #0684bd;
  color: #fff;
}

.c0.c0:active .c1 {
  color: #fff;
}

<li
  aria-disabled={false}
  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c0 MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={0}
>
  <div
    className="MuiListItemIcon-root c1 c2"
  >
    <span
      className=" star icon c3"
    >
      <svg
        className="c4"
        role="img"
        size="small"
      >
        <use
          href="#icon-star"
          xlinkHref="#icon-star"
        />
      </svg>
    </span>
  </div>
  Profile
</li>
`;

exports[`Storyshots Components/Menus Text MenuItem: Components/Menus Text MenuItem 1`] = `
.c0.c0 {
  padding: 4px 16px;
  font-size: 0.75rem;
  font-weight: 400;
  font-family: 'Roboto','Helvetica','Arial',sans-serif;
  line-height: 16px;
  color: #616161;
  height: auto;
  min-height: 32px;
  min-width: 112px;
  box-sizing: border-box;
}

.c0.c0:focus {
  background-color: rgba(0,0,0,0.12);
}

.c0.c0:hover {
  background-color: rgba(158,158,158,0.12);
}

.c0.c0:active {
  background-color: #0684bd;
  color: #fff;
}

.c0.c0:active .c1 {
  color: #fff;
}

<li
  aria-disabled={false}
  className="MuiButtonBase-root MuiListItem-root MuiMenuItem-root c0 MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
  onBlur={[Function]}
  onClick={[Function]}
  onDragLeave={[Function]}
  onFocus={[Function]}
  onKeyDown={[Function]}
  onKeyUp={[Function]}
  onMouseDown={[Function]}
  onMouseLeave={[Function]}
  onMouseUp={[Function]}
  onTouchEnd={[Function]}
  onTouchMove={[Function]}
  onTouchStart={[Function]}
  role="menuitem"
  tabIndex={0}
>
  Profile
</li>
`;
